added content in proto1 for ST monad and STVars

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1488,6 +1488,20 @@ url = {http://www.thesoftwareguild.com/history-of-programming-languages/}
   author={Machado, Ricardo J and Maciel, Rita Suzana P and Rubin, Julia and Botterweck, Goetz},
   publisher={Springer}
 }
+@msic{website:stmonadwiki,
+title = {ST Monad},
+author = {Haskell Wiki},
+month = {July},
+year = {2012},
+url = {https://wiki.haskell.org/Monad/ST}
+}
+@misc{website:stmonadstackoverflow,
+title = {How does the ST monad work?},
+author = {Stackoverflow},
+month = {September},
+year = {2012},
+url = {http://stackoverflow.com/questions/12468622/how-does-the-st-monad-work}
+}
 @comment{website:,
 title = ,
 author = ,
