--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -44,28 +44,23 @@ replicate different feature sets which are not naturally native to the language 
 the base language.
 The descriptions of multi paradigm languages across the web
 \cite{website:wikimultiparadigm,website:mdn,website:blogc2} converge to roughly of a framework providing tools to work with different 
-styles of programming \cite{website:wikimpllist,website:dmoz}.\endnote{%
-    Yet another metaphor that doesn't spin my wheels.\newline
-    \mehul{changed}\newline
-    \david{Now I just do not understand.}
-    \mehul{changed}
-}
+styles of programming \cite{website:wikimpllist,website:dmoz}.
 Generally speaking, this
 is not very popular in programming circles; one reason could be that it
 is a very broad topic and specifying details can be helpful.\endnote{%
-    Which fog?\newline
-    \mehul{changed}\newline
-    \david{\dots Which confusion?} \newline
-    \mehul{changed}
+  \mehul{changed}.\newline
+  \david{The English now reads well, but I am not certain what you are trying to say.
+  I take ``\textit{Generally speaking, this is not very popular in programming circles;}'' to mean that programmers
+  are not very fond of multi-paradigm languages.  Is that what you meant?
+  Does ``\textit{\dots; one reason could be that it is a very broad topic and specifying details can be helpful.}''
+  mean \textsl{one reason that multi-paradigm languages are not popular with programmers could be that\dots}; no, I
+  do not see how to complete that thought.}
 }
 
 \subsection{Functional Logic Programming Languages}
 
 Continuing from the previous section, we narrow down the scope by considering only multi paradigm declarative
-languages, i.e. functional logical programming languages.\endnote{%
-  This is a sentence fragment.
-  \mehul{changed}
-}
+languages, i.e. functional logical programming languages.
 By doing so a large amount of information pops up, from articles that give brief description and mentions
 \cite{website:wikiflpl, website:wikiflpllist} to the ones that provide implementation techniques\endnote{%
   Are the previous two fixes correct?
@@ -153,10 +148,9 @@ though it last saw a release back in 2001.
 Another prominent implementation is \progLang{OCaml}
 \cite{website:ocamlwiki,website:ocamllang},
 which adds object oriented capabilities to a powerful type system and module support.
-This is the case with most of the languages of the paradigm,most of them were developed as a proof of concept and are replaced by 
+This is the case with most of the languages of the \yyy{paradigm,most}{paradigm{\Large.} Most} of them were developed as a proof of concept and are replaced by 
 new ones based on different approaches to developing a multi paradigm language.\endnote{%
-  I do not understand the preceding sentence at all.
-  \mehul{changed}
+  Fix the comma and remove this endnote.
 }
 As mentioned before, one of the most poplar \cite{website:langpop} and widely used both in academia and industry is
 the \progLang{Scala} \cite{website:scala} programming language.
@@ -176,61 +170,29 @@ Only the ones that are easily available
 \item
   have been cited or referred by other attempts
 \end{inparaenum}
-have been included below, as the list is long and not the main focus of the thesis.\endnote{%
-  Make the change and delete this footnote.
-  I believe that adding ``\textsl{below}'' makes this sentence a lot clearer.
-  \mehul{changed}	
-}
-We begin with
-variants of
-\progLang{Prolog}.
+have been included below, as the list is long and not the main focus of the thesis.
+We begin with variants of \progLang{Prolog}.
 As of now there have been three popular ones, beginning with \progLang{Nue Prolog}, \cite{website:nue-prolog},
 \progLang{Oz (Mozart Programming System)} \cite{website:oz-mozart} and \progLang{Mercury} \cite{website:mercury}.
 These languages feel more like extensions of \progLang{Prolog} rather than hybrids.
 To start with \progLang{Mercury} represents a boundary between deterministic and non-deterministic programs.
 Similarly, \progLang{Nue Prolog} has special support for functions, while \progLang{Oz} gives concurrent constraint
-programming plus distributed support, with different function types for goal solving and expression rewriting.\endnote{%
-  Are we done with Australia?
-  If so, insert something like ``\textsl{Turning now to other languages,}''.
-  \mehul{changed}
-}
+programming plus distributed support, with different function types for goal solving and expression rewriting.
 \progLang{Escher} \cite{lloyd1999programming:escher} comes very close to \progLang{Haskell} with monads, higher
 order functions and lazy evaluation.
- We take a look at \progLang{Prolog} variants: \progLang{Ciao} \enparen{\cite{website:ciao}} is a preprocessor
-    to \progLang{Prolog} for functional syntax support; \progLang{$\lambda $ Prolog}
-    \enparen{\cite{website:lambda-prolog}}
-    aims at modular higher order programming with abstract data types in a logical setting;
-    \progLang{Babel} \enparen{\cite{website:babel,moreno1992logic, moreno1988babel}} combines pure
-    \progLang{Prolog} with a first order functional 
-    notation; \progLang{LIFE} \enparen{\cite{website:life}} is for  Logic, Inheritance, Functions and Equations in
-    \progLang{Prolog} syntax with currying and other features like functional languages; and there are others
-    \enparen{\cite{bert1987lpg,malachi1984tablog}}.\endnote{%
-  This is a good sentence but could be worded more clearly.
-  Here is one attempt:
-  \textsl{
-    We take a look at \progLang{Prolog} variants: \progLang{Ciao} \enparen{\cite{website:ciao}} is a preprocessor
-    to \progLang{Prolog} for functional syntax support; \progLang{$\lambda $ Prolog}
-    \enparen{\cite{website:lambda-prolog}}
-    aims at modular higher order programming with abstract data types in a logical setting;
-    \progLang{Babel} \enparen{\cite{website:babel,moreno1992logic, moreno1988babel}} combines pure
-    \progLang{Prolog} with a first order functional 
-    notation; \progLang{LIFE} \enparen{\cite{website:life}} is for  Logic, Inheritance, Functions and Equations in
-    \progLang{Prolog} syntax with currying and other features like functional languages; and there are others
-    \enparen{\cite{bert1987lpg,malachi1984tablog}}.}
-    \mehul{changed}
-}
+We take a look at \progLang{Prolog} variants: \progLang{Ciao} \enparen{\cite{website:ciao}} is a preprocessor to
+\progLang{Prolog} for functional syntax support; \progLang{$\lambda $ Prolog}
+\enparen{\cite{website:lambda-prolog}} aims at modular higher order programming with abstract data types in a
+logical setting; \progLang{Babel} \enparen{\cite{website:babel,moreno1992logic, moreno1988babel}} combines pure
+\progLang{Prolog} with a first order functional notation; \progLang{LIFE} \enparen{\cite{website:life}} is for
+Logic, Inheritance, Functions and Equations in \progLang{Prolog} syntax with currying and other features like
+functional languages; and there are others \enparen{\cite{bert1987lpg,malachi1984tablog}}.
 
 The functional language \progLang{Scheme} is a very popular choice for adding logic programming functionality to a functional 
-language.\endnote{%
-  What sort of thing?
-  \mehul{changed}
-}
+language.
 The book \cite{friedman05reasoned} along with the accompanying implementation \cite{website:kanren,website:minkanren} provides a similar 
-approach but for \progLang{Haskell} \cite{website:haskellkanren,website:molog,website:minikanrent}.
-\endnote{%
-  This preceding phrase is not a sentence.
-	\mehul{changed}
-}\elabel{not-a-sentence}
+approach\yyy{}{\Large,} but for \progLang{Haskell} \cite{website:haskellkanren,website:molog,website:minikanrent}.
+
 
 Finally talking about \progLang{Curry}, one of the most popular \progLang{Haskell} based multi paradigm languages
 with support for deterministic and non-deterministic computations. Contributing to the same there have been some
