--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -151,7 +151,7 @@ a sample trace for a query.
 \begin{enumerate}
 \item \cite{website:quotationstanford}
 
-When language is used to attribute properties to language or otherwise theorize about it, a linguistic device is needed that ‘turns\eref{non-ascii} 
+When language is used to attribute properties to language or otherwise theorize about it, a linguistic device is needed that `turns 
 language on itself'. 
 Quotation is one such device. It is our primary meta-linguistic tool.
 
