--- a/toDo.tex
+++ b/toDo.tex
@@ -42,7 +42,7 @@
 
 \item [\textbf{Mehul}]
 
-\item Remove the remaining non-\textsc{ascii} characters.
+\item (David: I did this.)
 
 \item
   Fix the capitalization of chapter,
