addressed notes in background and embedding : meeting commit

--- a/background.tex
+++ b/background.tex
@@ -227,12 +227,8 @@ Consider the object functional programming language, \progLang{Scala}
 \cite{website:scala}.
 It is purely functional but with objects and classes.
 With the above in mind, coming back to the problem of implementing \progLang{Prolog} in \progLang{Haskell} and the possible 
-methodologies to do so.\endnote{%
-  Sentence fragment.\newline
-  \mehul{changed}\newline
-  \david{It's still a sentence fragment.}
-}
-There have been quite a few attempts to ``merge'' these two programming languages that are from different programming
+methodologies to do so
+there have been quite a few attempts to ``merge'' these two programming languages that are from different programming
 paradigms.
 The attempts fall into two categories as follows:
 
