--- a/embedding.tex
+++ b/embedding.tex
@@ -67,14 +67,7 @@ This seems to be a common problem with the other implementation that exists, \ci
 Adding fuel to fire, is the question on \progLang{Prolog}'s existence and survival
 \cite{website:prolog-killer,website:prolog-steam,website:prolog-death,somogyi1995logic} since its use in industry
 is minimal in comparison with the languages of imperative nature.
-The purely declarative nature lacks basic requirements such as support for \languageConstruct{modules}.\endnote{%
-  \david{Do you mean that basic \progLang{Prolog} implementations lack modules;
-  or that \progLang{Prolog} lacks \languageConstruct{modules} because it is purely
-  declarative; or \dots?}\newline
-  \mehul{I do not know about the paradigm, but \progLang{Prolog} language having a declarative nature lacks
-    modules{\Huge.}}\newline
-  \david{I do not see the incompatibility between declarative languages and modules.}
-}
+Some \progLang{Prolog} implementations lack basic requirements such as support for \languageConstruct{modules}.
 The other issue is the ongoing comparison between the siblings \cite{website:haskell-choice} of the same family, the
 family of declarative languages.\endnote{%
   \david{What does this sentence mean?
