added and removed content, created subsections, addressed notes in relatedWork.tex

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1482,6 +1482,8 @@ url = {http://www.thesoftwareguild.com/history-of-programming-languages/}
  isbn = {0-262-19338-8},
  publisher = {MIT Press},
  address = {Cambridge, MA, USA},
+ pages       = {119-123},
+ chapter     = {6},
 }
 @article{machadomodel,
   title={Model-Based Methodologies for Pervasive and Embedded Software},
@@ -1501,6 +1503,20 @@ author = {Stackoverflow},
 month = {September},
 year = {2012},
 url = {http://stackoverflow.com/questions/12468622/how-does-the-st-monad-work}
+}
+@misc{website:prologcut,
+title = {cut in Prolog},
+author = {Wikipedia},
+month = {January},
+year = {2016},
+url = {https://en.wikibooks.org/wiki/Prolog/Cuts_and_Negation}
+}
+@misc{website:cutprologunionedu,
+title = {The cut},
+author = {Patrick Blackburn, Johan Bos and Kristina Striegnitz},
+month = {February},
+year = {2003},
+url = {http://cs.union.edu/~striegnk/learn-prolog-now/html/node88.html}
 }
 @comment{website:,
 title = ,
