changed chapter name from Haskell why haskell to Haskell

--- a/hwh.tex
+++ b/hwh.tex
@@ -6,7 +6,7 @@
 \begin{document}
 
 % ---------------------------------------------------------------------------
-\chapter{Haskell or Why Haskell ?}\label{chap:hwh}
+\chapter{Haskell}\label{chap:hwh}
 % ---------------------------------------------------------------------------
 
 
