added, removed content and addressed notes in hwh.tex

--- a/hwh.tex
+++ b/hwh.tex
@@ -6,14 +6,15 @@
 \begin{document}
 
 % ---------------------------------------------------------------------------
-\chapter{Haskell}\label{chap:hwh}
+\chapter{\progLang{Haskell}}\label{chap:hwh}
 % ---------------------------------------------------------------------------
 
 
 \section{What this chapter is about}
+This chapter discusses \progLang{Haskell} as a functional language and its features which assist in embedding domain specific languages.
 
-\noindent\rule{\textwidth}{0.5pt}
-%-----------------------------------------------------------------------------
+
+\section{Section title needed}
 
 
 In this chapter we discuss the properties of \progLang{Haskell}.
@@ -23,6 +24,7 @@ provides for embedded domain specific languages (eDSLs).
 
 \david{%
   This chapter needs to be rewritten without the list.
+\mehul{changed}
 }
 
 \paragraph{why a functional language?}
@@ -94,12 +96,8 @@ This results in the ability to define infinite data structures because at execut
 
 
 
-
-
-
-
 \section{Chapter Recapitulation}
-
+Recapitulating, this chapter provided information on \progLang{Haskell} as a tool for embedding domain specific languages.
 
 
 \ifMain
