changed chapter name from prolog why prolog to Prolog

--- a/pwp.tex
+++ b/pwp.tex
@@ -8,7 +8,7 @@
 \begin{document}
 
 % ---------------------------------------------------------------------------
-\chapter{Prolog or Why Prolog ?}\label{chap:pwp}
+\chapter{\progLang{Prolog}}\label{chap:pwp}
 % ---------------------------------------------------------------------------
 %Prolog / Why Prolog ?
 
