Added Prototype 3 diagram.

--- a/proto3.tex
+++ b/proto3.tex
@@ -9,6 +9,14 @@
 \section{About this chapter}
 This chapter discusses the procedure to infuse multiple search strategies into a \progLang{Prolog} query resolver with monadic unification. 
 
+\david{This chapter is beautifully illustrated by Figure~\vref{fig:architecture-proto-3}.}
+
+\begin{figure}
+  \includegraphics[width=1\textwidth]{Prototype-3-diagram.pdf}
+\vspace*{-1cm}
+  \caption{Architecture of Prototype 3}
+  \label{fig:architecture-proto-3}
+\end{figure}
 
 
 \section{Section title needed}
