changed section name what is this chapter about to About this chapter

--- a/accomplishedWork.tex
+++ b/accomplishedWork.tex
@@ -10,7 +10,7 @@
 \chapter{Accomplished Work}\label{chap:accomplishedWork}
 %-----------------------------------------------------------------------------
 
-\section{What this chapter is about}\label{sec:what-this-chapter:accomplishedWork}
+\section{About this chapter}\label{sec:what-this-chapter:accomplishedWork}
 This chapter provides the details for the conceptual contributions of this thesis along with information on the implementation of each 
 prototype. Moreover, we state the other 'soft'\mehul{surveys, making libraries work etc etc} contributions of this thesis.
 
