--- a/background.tex
+++ b/background.tex
@@ -10,7 +10,7 @@
 \chapter{Background}\label{chap:background}
 %----------------------------------------------------------------------------
 
-\section{What this chapter is about}
+\section{About this chapter}
 
 This chapter consists of information on the subject of programming languages and their classification into paradigms such as functional and 
 logic styles. Further on, we talk about the languages used for the implementations in this thesis\yyy{}{\Large,} namely \progLang{Prolog} and 
