--- a/futureScope.tex
+++ b/futureScope.tex
@@ -11,7 +11,7 @@
 \chapter{Future Scope}\label{chap:futureScope}
 
 
-\section{What this chapter is about}
+\section{About this chapter}
 
 \noindent\rule{\textwidth}{0.5pt}
 %-----------------------------------------------------------------------------
