--- a/hwh.tex
+++ b/hwh.tex
@@ -10,7 +10,7 @@
 % ---------------------------------------------------------------------------
 
 
-\section{What this chapter is about}
+\section{About this chapter}
 This chapter discusses \progLang{Haskell} as a functional language and its features which assist in embedding domain specific languages.
 
 
