--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -9,7 +9,7 @@
 \chapter{Multi Paradigm Languages (Functional Logic Languages)}\label{chap:multiparadigm}
 
 
-\section{What this chapter is about}
+\section{About this chapter}
 
 This chapter describes the approach for integrating properties of multiple languages from different programming paradigms, especially, 
 functional logic programming languages.  
