--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -12,7 +12,7 @@
 
 \textcolor{blue}{\textsl{The title of this chapter needs to change.}}
 
-\section{What this chapter is about}\label{sec:what-this-chapter:proposedWork}
+\section{About this chapter}\label{sec:what-this-chapter:proposedWork}
 %% 2016-01-16.  dgc.  Perhaps we should change the label above? TODO
 
 This chapter discusses the current work in done in embedding programming languages.
