--- a/proto3.tex
+++ b/proto3.tex
@@ -6,7 +6,7 @@
 \chapter{Prototype 3}{\label{proto3}}
 
 
-\section{What this chapter is about}
+\section{About this chapter}
 This chapter discusses the procedure to infuse multiple search strategies into a \progLang{Prolog} query resolver with monadic unification. 
 
 
