--- a/proto4.tex
+++ b/proto4.tex
@@ -9,7 +9,7 @@
 \chapter{Prototype 4}{\label{proto4}}
 
 
-\section{What this chapter is about}
+\section{About this chapter}
 
 \noindent\rule{\textwidth}{0.5pt}
 %-----------------------------------------------------------------------------
