--- a/pwp.tex
+++ b/pwp.tex
@@ -13,7 +13,7 @@
 %Prolog / Why Prolog ?
 
 
-\section{What this chapter is about}
+\section{About this chapter}
 
 This chapter discusses the properties of the target language \progLang{Prolog} and the feature set that will be translated to the host 
 language to extend its capabilities.
