--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -10,7 +10,7 @@
 % ---------------------------------------------------------------------------
 
 
-\section{What this chapter is about}
+\section{About this chapter}
 
 \noindent\rule{\textwidth}{0.5pt}
 %-----------------------------------------------------------------------------
