--- a/embedding.tex
+++ b/embedding.tex
@@ -9,7 +9,7 @@
 \chapter{Embedding a Programming Language into another Programming Language }\label{chap:embedding}
 
 
-\section{What this chapter is about}
+\section{About this chapter}
 
 The art of embedding a programming language into another one has been explored a number of times in the form of
 building libraries or developing foreign function interfaces and so on.
