--- a/results.tex
+++ b/results.tex
@@ -8,7 +8,7 @@
 \chapter{Results}\label{sect:results}
 
 
-\section{What this chapter is about}
+\section{About this chapter}
 
 \noindent\rule{\textwidth}{0.5pt}
 %-----------------------------------------------------------------------------
