--- a/workCompleted.tex
+++ b/workCompleted.tex
@@ -12,7 +12,7 @@
 %----------------------------------------------------------------------------
 
 
-\section{What this chapter is about}
+\section{About this chapter}
 
 \noindent\rule{\textwidth}{0.5pt}
 %-----------------------------------------------------------------------------
