addressed notes in multiparadigm.tex

--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -55,6 +55,7 @@ is a very broad topic and specifying details can be helpful.\endnote{%
   Does ``\textit{\dots; one reason could be that it is a very broad topic and specifying details can be helpful.}''
   mean \textsl{one reason that multi-paradigm languages are not popular with programmers could be that\dots}; no, I
   do not see how to complete that thought.}
+  \mehul{discussion required}
 }
 
 \subsection{Functional Logic Programming Languages}
@@ -62,14 +63,8 @@ is a very broad topic and specifying details can be helpful.\endnote{%
 Continuing from the previous section, we narrow down the scope by considering only multi paradigm declarative
 languages, i.e. functional logical programming languages.
 By doing so a large amount of information pops up, from articles that give brief description and mentions
-\cite{website:wikiflpl, website:wikiflpllist} to the ones that provide implementation techniques\endnote{%
-  Are the previous two fixes correct?
-  If so, remove this endnote.
-}
-\cite{website:imlpementingflpl}, which also give an overview of the aim and also the list of publications.\endnote{%
-  Have I understood it?
-  If not, revert the change and try again.
-}
+\cite{website:wikiflpl, website:wikiflpllist} to the ones that provide implementation techniques
+\cite{website:imlpementingflpl}, which also give an overview of the aim and also the list of publications.
 
 \begin{comment}
 
@@ -148,10 +143,8 @@ though it last saw a release back in 2001.
 Another prominent implementation is \progLang{OCaml}
 \cite{website:ocamlwiki,website:ocamllang},
 which adds object oriented capabilities to a powerful type system and module support.
-This is the case with most of the languages of the \yyy{paradigm,most}{paradigm{\Large.} Most} of them were developed as a proof of concept and are replaced by 
-new ones based on different approaches to developing a multi paradigm language.\endnote{%
-  Fix the comma and remove this endnote.
-}
+This is the case with most of the languages of the paradigm. Most of them were developed as a proof of concept and are replaced by 
+new ones based on different approaches to developing a multi paradigm language.
 As mentioned before, one of the most poplar \cite{website:langpop} and widely used both in academia and industry is
 the \progLang{Scala} \cite{website:scala} programming language.
 
@@ -191,7 +184,7 @@ functional languages; and there are others \enparen{\cite{bert1987lpg,malachi198
 The functional language \progLang{Scheme} is a very popular choice for adding logic programming functionality to a functional 
 language.
 The book \cite{friedman05reasoned} along with the accompanying implementation \cite{website:kanren,website:minkanren} provides a similar 
-approach\yyy{}{\Large,} but for \progLang{Haskell} \cite{website:haskellkanren,website:molog,website:minikanrent}.
+approach, but for \progLang{Haskell} \cite{website:haskellkanren,website:molog,website:minikanrent}.
 
 
 Finally talking about \progLang{Curry}, one of the most popular \progLang{Haskell} based multi paradigm languages
