addressed notes in relatedWork.tex

--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -11,10 +11,8 @@
 
 
 \section{About this chapter}
-
-\noindent\rule{\textwidth}{0.5pt}
-%-----------------------------------------------------------------------------
-
+This chapter discusses concepts which are related to the work presented in this thesis which may no bear a direct point of contact but 
+contribute to understanding. 
 
 \section{Warren abstract machine}
 There are some technicalities which are indirectly related to the problem but do not bare a point of contact.
@@ -194,6 +192,7 @@ trace for the query with the \prologConstruct{cut} operator.
 
 \section{Quasiquotation and \progLang{Haskell}}
 \subsection{Quasiquotation}
+\mehul{needs to be compressed into a single short explanation}
 
 When language is used to attribute properties to language or otherwise theorize about it, a linguistic device is needed that `turns 
 language on itself'. Quotation is one such device \cite{website:quotationstanford}.
@@ -220,12 +219,13 @@ constructed using domain specific, programmer-defined concrete syntax \cite{hask
 
 
 \section{Meta syntactic variables}
-Some sources for the topic 
+\mehul{needs to be compressed into a single short explanation}
 
 
 \cite{website:metasyntacticvariableswiki}
 A metasyntactic variable is a placeholder name used in computer science, a word without meaning intended to be
 substituted by some objects pertaining to the context where it is used.
+
 The word \markWord{foo} as used in IETF Requests for Comments is a good example.\endnote{%
   This regards
   \vspace*{-1.5\baselineskip}
@@ -294,9 +294,7 @@ Any filename beginning with a metasyntactic variable denotes a scratch file. Thi
 
 \cite{webste:metasyntacticvariablesc2wiki}
 
-A word, used in conversation or text that is meant as a variable. There is a fairly standard set in the ComputerScience\endnote{%
-  ``ComputerScience'' should be ``Computer Science''.
-}
+A word, used in conversation or text that is meant as a variable. There is a fairly standard set in the Computer Science
 culture. People tend to create their own if they are not exposed to others, which can be confusing. Of course, if you haven't seen them before they can be quite confusing. They are, however, useful enough that this is not enough reason to give them up.
 Standard set: foo, bar, baz, foobar/quux, quuux, quuuux, ....
 
