removed bad instance for FlatItem from proto1.tex .

--- a/proto1.tex
+++ b/proto1.tex
@@ -605,9 +605,9 @@ We create the necessary instances\endnote{%
 as shown in Listing~\ref{tab:flat-term-class-inst}.
 \begin{code-list}
   \begin{singlespace}
-    \inputminted[linenos,gobble=4]{haskell}{haskell-proto1-class-flat.hs}
+    \inputminted[linenos,gobble=4,lastline=12]{haskell}{haskell-proto1-class-flat.hs}
   \end{singlespace}
-  \caption{FlatTerm class instances}
+  \caption{\protect\haskellConstruct{FlatTerm} class instances}
   \label{tab:flat-term-class-inst}
 \end{code-list}
 
